Replaced ownership of PinchViewport from WebView to FrameHost.
Removed PinchViewport's dependency on WebViewImpl and replaced it with
FrameHost, foreshadowing its move to FrameHost.

BUG=349941

Review URL: https://codereview.chromium.org/186123005

git-svn-id: svn://svn.chromium.org/blink/trunk@168693 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/Source/core/frame/Settings.in
+++ b/Source/core/frame/Settings.in
@@ -243,6 +243,7 @@ experimentalWebSocketEnabled initial=false
 # crbug.com/304869 tracks removal.
 pinchVirtualViewportEnabled initial=false
 useSolidColorScrollbars initial=false
+pinchOverlayScrollbarThickness type=int, initial=0
 
 mainFrameClipsContent initial=true
 
