Support font-variant-ligatures: (no-)contextual.
BUG=348659

Review URL: https://codereview.chromium.org/189163004

git-svn-id: svn://svn.chromium.org/blink/trunk@168764 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/Source/core/css/CSSValueKeywords.in
+++ b/Source/core/css/CSSValueKeywords.in
@@ -61,6 +61,8 @@ discretionary-ligatures
 no-discretionary-ligatures
 historical-ligatures
 no-historical-ligatures
+contextual
+no-contextual
 
 //
 // CSS_PROP_FONT_WEIGHT:
