Implement will-change-based GPU rasterization hint
This uses an element's will-change value to determine
whether it should have a GPU rasterization hint, and
uses a newly-added 
acceleratedCompositingForGpuRasterizationHintEnabled
setting to determine whether to create composited layers
for elements that have a GPU rasterization hint.

will-change is currently behind a runtime flag.

Intent-to-implement:
https://groups.google.com/a/chromium.org/forum/#!topic/blink-dev/M62y2nKZ-gE

Spec: http://tabatkins.github.io/specs/css-will-change/

BUG=313532

Review URL: https://codereview.chromium.org/183103007

git-svn-id: svn://svn.chromium.org/blink/trunk@169013 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/Source/core/frame/Settings.in
+++ b/Source/core/frame/Settings.in
@@ -110,6 +110,7 @@ acceleratedCompositingForFixedPositionEnabled initial=false
 acceleratedCompositingForOverflowScrollEnabled initial=false
 acceleratedCompositingForTransitionEnabled initial=false
 acceleratedCompositingForFixedRootBackgroundEnabled initial=false
+acceleratedCompositingForGpuRasterizationHintEnabled initial=false
 
 forceCompositingMode initial=false
 
