Ship CSS Font Loading (aka. Font Load Events)
Intent to ship thread - https://groups.google.com/a/chromium.org/d/msg/blink-dev/kWkdUACnPn4/G_ZLiuQcwFoJ
BUG=196457,53213

Review URL: https://codereview.chromium.org/152173003

git-svn-id: svn://svn.chromium.org/blink/trunk@169183 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/Source/platform/RuntimeEnabledFeatures.in
+++ b/Source/platform/RuntimeEnabledFeatures.in
@@ -56,7 +56,7 @@ ExperimentalWebSocket status=test
 FileAPIBlobClose status=experimental
 FileConstructor status=experimental
 FileSystem status=stable
-FontLoadEvents status=experimental
+FontLoadEvents status=stable
 FastTextAutosizing
 Gamepad status=stable
 HTMLImports status=test
