Ship Shadow DOM
Intent to Ship thread: https://groups.google.com/a/chromium.org/forum/#!topic/blink-dev/ay9tVGRa8Rg

BUG=336121

Review URL: https://codereview.chromium.org/153483002

git-svn-id: svn://svn.chromium.org/blink/trunk@169201 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/Source/platform/RuntimeEnabledFeatures.in
+++ b/Source/platform/RuntimeEnabledFeatures.in
@@ -99,7 +99,7 @@ ScrollTopLeftInterop status=experimental
 
 ServiceWorker status=experimental
 SessionStorage status=stable
-ShadowDOM status=experimental
+ShadowDOM status=stable
 SharedWorker status=stable
 SpeechInput status=stable
 SpeechSynthesis status=stable
