--- a/Source/platform/RuntimeEnabledFeatures.in
+++ b/Source/platform/RuntimeEnabledFeatures.in
@@ -129,5 +129,5 @@ WebGLDraftExtensions status=experimental
 WebMIDI status=test
 WebKitMediaSource status=stable
 WebVTTRegions depends_on=VideoTrack, status=experimental
-WOFF2 status=experimental
+WOFF2 status=stable
 XSLT status=stable
