Rename FontSmallCaps to FontVariant to match CSS terminology
Rename the FontSmallCaps enum, the FontDescription smallCaps/
setSmallCaps methods and wrappers to FontVariant, variant and setVariant
respectively to better match the CSS terminology.

R=dglazkov@chromium.org, adamk@chromium.org

Review URL: https://codereview.chromium.org/197753012

git-svn-id: svn://svn.chromium.org/blink/trunk@169258 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/Source/core/css/CSSProperties.in
+++ b/Source/core/css/CSSProperties.in
@@ -59,7 +59,7 @@ font-family custom_all
 font-kerning font, type_name=FontDescription::Kerning, name_for_methods=Kerning
 font-size custom_all
 font-style font, type_name=FontItalic, name_for_methods=Italic
-font-variant font, type_name=FontSmallCaps, name_for_methods=SmallCaps
+font-variant font, type_name=FontVariant, name_for_methods=Variant
 font-variant-ligatures custom_all
 font-weight custom_all
 grid-auto-flow type_name=GridAutoFlow
