Enable CSS touch-action by default
Blink intent to ship: https://groups.google.com/a/chromium.org/forum/#!topic/blink-dev/sc5lHnlcLvM

Removing the unused flag is tracked in crbug.com/258459

BUG=258459

Review URL: https://codereview.chromium.org/198103007

git-svn-id: svn://svn.chromium.org/blink/trunk@169275 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/Source/platform/RuntimeEnabledFeatures.in
+++ b/Source/platform/RuntimeEnabledFeatures.in
@@ -35,7 +35,7 @@ CSSMaskSourceType status=experimental
 CSSOMSmoothScroll status=experimental
 CSSShapes status=experimental
 CSSStickyPosition status=experimental
-CSSTouchAction status=experimental
+CSSTouchAction status=stable
 CSSTouchActionDelay status=test
 CSSViewport status=experimental
 CSSWillChange status=experimental
