Remove EnableMemoryInfo WebSetting, rename internal to preciseMemoryInfoEnabled
As --enable-memory-info flag and web preference were removed from Chrome,
remove the corresponding WebSetting.

The internal setting is used by PerfTestRunner, so leave it, but rename to
"preciseMemoryInfoEnabled" for clarity.

BUG=350339

Review URL: https://codereview.chromium.org/196533018

git-svn-id: svn://svn.chromium.org/blink/trunk@169434 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/Source/core/frame/Settings.in
+++ b/Source/core/frame/Settings.in
@@ -133,7 +133,7 @@ webAudioEnabled initial=false
 
 fullScreenEnabled initial=false
 asynchronousSpellCheckingEnabled initial=false
-memoryInfoEnabled initial=false
+preciseMemoryInfoEnabled initial=false
 
 hyperlinkAuditingEnabled initial=false
 allowDisplayOfInsecureContent initial=true
