CSS Transforms: Implement backface-visibility
Implements backface-visibility as defined in CSS Transforms[1]. Behavior is
identical to -webkit-backface-visibility.

Note, this property is guarded by the CSSTransformsUnprefixed runtime feature
(enabled only for testing).

[1] http://www.w3.org/TR/css3-transforms/

BUG=154772

Review URL: https://codereview.chromium.org/211213002

git-svn-id: svn://svn.chromium.org/blink/trunk@170021 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/Source/core/css/CSSProperties.in
+++ b/Source/core/css/CSSProperties.in
@@ -155,6 +155,7 @@ z-index type_name=int, custom_all
 -webkit-animation-timing-function custom_all
 -webkit-appearance type_name=ControlPart
 -webkit-aspect-ratio custom_all
+backface-visibility
 -webkit-backface-visibility
 -webkit-background-clip use_handlers_for=CSSPropertyBackgroundClip
 -webkit-background-composite custom_all
