--- a/Source/core/frame/Settings.in
+++ b/Source/core/frame/Settings.in
@@ -90,6 +90,8 @@ allowScriptsToCloseWindows initial=false
 deferredFiltersEnabled initial=false
 regionBasedColumnsEnabled initial=false
 
+containerCullingEnabled initial=false
+
 # FIXME: This should really be disabled by default as it makes platforms that
 # don't support the feature download files they can't use by.
 # Leaving enabled for now to not change existing behavior.
