Make EncryptedMedia a "test" feature.
BUG=356839

Review URL: https://codereview.chromium.org/214983002

git-svn-id: svn://svn.chromium.org/blink/trunk@170207 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/Source/platform/RuntimeEnabledFeatures.in
+++ b/Source/platform/RuntimeEnabledFeatures.in
@@ -48,7 +48,7 @@ DeviceOrientation status=stable
 DialogElement status=experimental
 DirectWrite
 EncodingAPI status=experimental
-EncryptedMedia status=experimental
+EncryptedMedia status=test
 EncryptedMediaAnyVersion status=stable
 ExperimentalCanvasFeatures status=test
 ExperimentalContentSecurityPolicyFeatures status=experimental
