--- a/Source/platform/RuntimeEnabledFeatures.in
+++ b/Source/platform/RuntimeEnabledFeatures.in
@@ -119,7 +119,7 @@ Touch status=stable
 
 TouchIconLoading
 UserSelectAll status=experimental
-ScriptPromiseOnV8Promise
+ScriptPromiseOnV8Promise status=stable
 VideoTrack depends_on=Media, status=stable
 WebAnimationsSVG
 WebAnimationsAPI status=experimental
