CSS Transforms: Implement transform-style
Implements transform-style as defined in CSS Transforms[1]. Behavior is
identical to -webkit-transform-style.

Note, this property is guarded by the CSSTransformsUnprefixed runtime feature
(enabled only for testing).

[1] http://www.w3.org/TR/css3-transforms/

BUG=154772

Review URL: https://codereview.chromium.org/211123002

git-svn-id: svn://svn.chromium.org/blink/trunk@170305 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/Source/core/css/CSSProperties.in
+++ b/Source/core/css/CSSProperties.in
@@ -230,6 +230,7 @@ text-underline-position custom_value
 -webkit-transform-origin-x type_name=Length, converter=convertLength
 -webkit-transform-origin-y type_name=Length, converter=convertLength
 -webkit-transform-origin-z type_name=float, converter=convertComputedLength<float>
+transform-style name_for_methods=TransformStyle3D
 -webkit-transform-style name_for_methods=TransformStyle3D
 -webkit-transition-delay custom_all
 -webkit-transition-duration custom_all
