SRI: Add the 'integrity' attribute, and a SubresourceIntegrity runtime flag.
This patch adds a new flag to begin experimentation with the Subresource
Integrity specification[1], and begins adding the minimal amount of
functionality so we can test that the flag is working. That turns out to
be the 'integrity' attribute on various HTML elements that we'll use
later in order to do the actual verification.

Intent to Implement at [2].

[1]: http://w3c.github.io/webappsec/specs/subresourceintegrity/
[2]: https://groups.google.com/a/chromium.org/d/msg/blink-dev/hTDUpMk_TV8/t_rjlkKfgGgJ

BUG=355467

Review URL: https://codereview.chromium.org/208423011

git-svn-id: svn://svn.chromium.org/blink/trunk@170313 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/Source/platform/RuntimeEnabledFeatures.in
+++ b/Source/platform/RuntimeEnabledFeatures.in
@@ -106,6 +106,7 @@ Srcset status=stable
 Stream status=experimental
 StyleScoped status=experimental
 SubpixelFontScaling status=experimental
+SubresourceIntegrity status=test
 SVGPaintOrder status=stable
 
 // Enable optimizations to recalculate style on the fewest possible number of
