Implement ImageData constructors.
The spec now defines a pair of ImageData constructors,

  http://www.whatwg.org/specs/web-apps/current-work/#imagedata

Provide an implementation of both here.

R=
BUG=338804

Review URL: https://codereview.chromium.org/196343032

git-svn-id: svn://svn.chromium.org/blink/trunk@170325 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/Source/platform/RuntimeEnabledFeatures.in
+++ b/Source/platform/RuntimeEnabledFeatures.in
@@ -62,6 +62,7 @@ Gamepad status=stable
 HTMLImports status=test
 HighResolutionTimeInWorkers status=stable
 IMEAPI status=experimental
+ImageDataConstructor status=experimental
 IndexedDBExperimental status=experimental
 InputModeAttribute status=experimental
 LangAttributeAwareFormControlUI
