Add Web API and runtime enable flag for PreciseMemoryInfo, this flag will used to control performance/console.memory return quantized or real js heap info.
BUG=326370

Review URL: https://codereview.chromium.org/218213002

git-svn-id: svn://svn.chromium.org/blink/trunk@170417 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/Source/platform/RuntimeEnabledFeatures.in
+++ b/Source/platform/RuntimeEnabledFeatures.in
@@ -81,6 +81,7 @@ OverlayFullscreenVideo
 PagePopup status=stable
 PathOpsSVGClipping
 PeerConnection depends_on=MediaStream, status=stable
+PreciseMemoryInfo
 Quota status=stable
 QuotaPromise status=experimental
 OverlayScrollbars
