Define push_messaging module with PushManager skeleton.
Intent to implement thread:
https://groups.google.com/a/chromium.org/forum/#!topic/blink-dev/GLXyXABvA_0

BUG=350378

Review URL: https://codereview.chromium.org/213013006

git-svn-id: svn://svn.chromium.org/blink/trunk@170454 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/Source/platform/RuntimeEnabledFeatures.in
+++ b/Source/platform/RuntimeEnabledFeatures.in
@@ -82,6 +82,7 @@ PagePopup status=stable
 PathOpsSVGClipping
 PeerConnection depends_on=MediaStream, status=stable
 PreciseMemoryInfo
+PushMessaging status=test
 Quota status=stable
 QuotaPromise status=experimental
 OverlayScrollbars
