CSS Transforms: Implement perspective-origin
Implements perspective-origin as defined in CSS Transforms[1]. Behavior is
similar to -webkit-perspective-origin, however perspective-origin is not a 
shorthand. New parsing and serialization (mostly matching Gecko) has been 
introduced.

The animation system is modified to avoid running animations and 
transitions on both the prefixed and unprefixed variants at the same 
time. Internally, animations are mapped to the unprefixed variant. 
As animations operate directly on the RenderStyle storage the result 
of specifying an animation on either -webkit-perspective-origin
or perspective-origin is the same.

However, support for independent animation/transition of 
-webkit-perspective-origin-* is removed. The X and Y coordinates now
always transition together.

Note, this property and changes in behavior are guarded by the
CSSTransformsUnprefixed runtime feature (enabled only for testing).

[1] http://www.w3.org/TR/css3-transforms/

BUG=154772

Review URL: https://codereview.chromium.org/212673002

git-svn-id: svn://svn.chromium.org/blink/trunk@170547 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/Source/core/css/CSSProperties.in
+++ b/Source/core/css/CSSProperties.in
@@ -214,6 +214,7 @@ column-fill type_name=ColumnFill
 -webkit-mask-repeat-x custom_all
 -webkit-mask-repeat-y custom_all
 -webkit-mask-size custom_all
+perspective-origin custom_all
 -webkit-perspective-origin custom_all
 -webkit-perspective-origin-x type_name=Length, converter=convertLength
 -webkit-perspective-origin-y type_name=Length, converter=convertLength
