--- a/LayoutTests/http/conf/lighttpd.conf
+++ b/LayoutTests/http/conf/lighttpd.conf
@@ -12,6 +12,7 @@ index-file.names            = ( "index.php", "index.pl", "index.cgi",
                                 "index.html", "index.htm", "default.htm" )
 # mimetype mapping
 mimetype.assign             = (
+  ".bmp"          =>      "image/bmp",
   ".gif"          =>      "image/gif",
   ".jpg"          =>      "image/jpeg",
   ".jpeg"         =>      "image/jpeg",
@@ -26,8 +27,8 @@ mimetype.assign             = (
   ".conf"         =>      "text/plain",
   ".text"         =>      "text/plain",
   ".txt"          =>      "text/plain",
-  ".dtd"          =>      "text/xml",
-  ".xml"          =>      "text/xml",
+  ".dtd"          =>      "application/xml-dtd",
+  ".xml"          =>      "application/xml",
   ".manifest"     =>      "text/cache-manifest",
  )
 
