--- a/Source/platform/RuntimeEnabledFeatures.in
+++ b/Source/platform/RuntimeEnabledFeatures.in
@@ -125,13 +125,12 @@ Touch status=stable
 TouchIconLoading
 UserSelectAll status=experimental
 ScriptPromiseOnV8Promise
-VideoTrack depends_on=Media, status=stable
 WebAnimationsSVG
 WebAnimationsAPI status=experimental
 WebAudio condition=WEB_AUDIO, status=stable
 WebGLDraftExtensions status=experimental
 WebMIDI status=test
 WebKitMediaSource status=stable
-WebVTTRegions depends_on=VideoTrack, status=experimental
+WebVTTRegions depends_on=Media, status=experimental
 WOFF2 status=stable
 XSLT status=stable
